<resources>
    <string name="app_name">Auth Manager</string>
    <string name="action_settings">Settings</string>

    <string name="remove_credential">RemoveCredential: %1$s</string>
    <string name="remove_simple_credential_error">Cannot remove single credential: %1$s</string>

    <string name="firebase_auth_title">Firebase Auth</string>
    <string name="google_auth_title">Google</string>
    <string name="facebook_auth_title">Facebook</string>
    <string name="apple_auth_title">Apple</string>
    <string name="phone_auth_title">Phone</string>
    <string name="logout_auth_title">Logout</string>

    <string name="simple_auth_title">Simple Auth</string>
    <string name="simple_phone_auth_title">Phone</string>
    <string name="simple_email_auth_title">Email</string>
    <string name="remove_simple_email_auth_title">Remove Email</string>
    <string name="remove_simple_phone_auth_title">Remove Phone</string>

    <string name="huawei_auth_title">Huawei Auth</string>
    <string name="huawei_phone_auth_title">Phone</string>
    <string name="huawei_email_auth_title">Email</string>
    <string name="remove_huawei_email_auth_title">Remove Email</string>
    <string name="remove_huawei_phone_auth_title">Remove Phone</string>

    <string name="facebook_app_id" translatable="false">791683691996137</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb791683691996137</string>
    <string name="facebook_client_token" translatable="false">73f957ae0a8ccfd1ba737c86f4b8b519</string>

    <string name="server_client_id" translatable="false">142753893367-l04c74ijg20n16enu5alcg8rahb15s5g.apps.googleusercontent.com</string>
    <string name="client_secret" translatable="false">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</string>
    <string name="request_security_code">Request security code</string>
    <string name="register_with_code">Register with code</string>
    <string name="signin">SignIn</string>
</resources>